force-app/main/default/objects/BT_Event_To_Campaign_Status_Mapping__mdt.object
<CustomObject>
    <description>metadata to help mapping between event registration status and campaign</description>
    <fields>
        <fullName>Campaign_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if the campaign isactive flag is true</description>
        <label>Campaign Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Status__c</fullName>
        <description>Describes the status of the campaign</description>
        <label>Campaign Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <description>Describes the status of an event (conference360__Event__c)</description>
        <label>Event Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>BT Event To Campaign Status Mapping</label>
    <pluralLabel>BT Event To Campaign Status Mapping</pluralLabel>
</CustomObject>